# rasta

./: README.md
rasta_data_manipulation/: .gitignore  README.md  TODO.md  extract_result.sh  find_apks_by_tool_error.sh  make_db.sh  means_size.sql  means_success_by_year.sql  mypy.ini  pyproject.toml
rasta_data_manipulation/rasta_triturage/: __init__.py  apk.py  cli.py  data_set.py  ic3.py  populate_db_apk.py  populate_db_exec.py  populate_db_tool.py  query_error.py  ressources.py  status.py  utils.py
rasta_exp/: .gitignore  README.md  apk.py  build_docker_images.sh  download_sif_images.sh  error_collector.py  grunt-worker.py  launch-container.sh  nb_year_whithout_commit.py  quick_test_tool.sh  requirements.txt  run_exp_local.sh  settings.ini  utils.py
rasta_exp/cluster_worker/: grunt-worker-launcher-2.sh  grunt-worker-launcher-4.sh  grunt-worker-launcher-6.sh  grunt-worker-launcher.sh  grunt.sh  stats.py
rasta_exp/dataset/: drebin  set0  set1  set2  set3  set4  set5  set6  set7  set8  set9
rasta_exp/docker/a3e/: README.md
rasta_exp/docker/adagio/: README.md  test.py
rasta_exp/docker/amandroid/: README.md  test.py
rasta_exp/docker/anadroid/: README.md  test.py
rasta_exp/docker/androguard/: README.md
rasta_exp/docker/androguard_dad/: RASTA_VERSION  README.md  test.py
rasta_exp/docker/blueseal/: test.py  (+1 more)
rasta_exp/envs/: adagio.env  amandroid.env  amandroid_big.env  amandroid_docker.env  anadroid.env  anadroid_big.env  anadroid_docker.env  anadroid_medium.env  apparecium_docker.env  blueseal.env  blueseal_big.env  blueseal_docker.env  blueseal_medium.env  dialdroid.env  dialdroid_big.env  didfail.env  didfail_big.env  didfail_docker.env  didfail_medium.env  droidsafe.env  droidsafe_big.env  droidsafe_medium.env  flowdroid.env  flowdroid_big.env  flowdroid_docker.env  flowdroid_medium.env  gator_medium.env  ic3_big.env  ic3_fork.env  ic3_fork_docker.env  ic3_medium.env  perfchecker_medium.env  saaf_docker.env  wognsen_et_al_docker.env
rasta_exp/tester/: __init__.py  abstract_tester.py  adagio_tester.py  amandroid_tester.py  anadroid_tester.py  androguard_dad_tester.py  androguard_tester.py  apparecium_tester.py  blueseal_tester.py  dialdroid_tester.py  didfail_tester.py  droidsafe_tester.py  flowdroid_tester.py  gator_tester.py  ic3_fork_tester.py  ic3_tester.py  iccta_tester.py  mallodroid_tester.py  perfchecker_tester.py  redexer_tester.py  saaf_tester.py  wognsen_et_al_tester.py
rasta_exp/utils/: couch_to_dir.py  gen_tasks.sh  get_extraneous.py  get_finished.py  get_missing.py  get_status_stats.py  init.sh  make_all_stats.sh
(+97 files in other folders)
